# pedestrian-detector

./: .gitignore  CMakeLists.txt  main.cpp  output.txt  readme.md
include/: data.h  descriptors.h  evaluation.h  features.h  io.h  utils.h
src/: data.cpp  descriptors.cpp  evaluation.cpp  features.cpp  io.cpp  utils.cpp
